[package]
name = "async-receiver-b"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
hyperware_process_lib = { version = "1.0.2", features = ["logging"] }
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"
once_cell = "1.20.2"
uuid = { version = "1.0", features = ["v4"] }
hyperware_app_common = { path = "../crates/hyperware_app_common" }
shared = { path = "../lib/shared" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"

