[package]
name = "receiver-b-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
hyperware_process_lib = { version = "1.0.2", features = ["logging"] }
process_macros = "0.1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"
once_cell = "1.20.2"
futures = "0.3"
uuid = { version = "1.0" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"
